--- a/src/scss/_product_menu.scss
+++ b/src/scss/_product_menu.scss
@@ -64,7 +64,7 @@
     font-size: 1.4em;
     margin: .6em 0 .3em;
     position: relative;
-    z-index: -50;
+    z-index: 0;
   }
   .productCase__name::after {
     content: '';
